--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The Beardy Developer | David Thompson</title>
+    <title>Joseph Ford Thompson | UX</title>
   </head>
   <body>
     <div id="root"></div>
