--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="image"></div>
         <h1 class="name">Joseph Ford Thompson</h1>
-        <h2 class="position">UX</h2>
+        <h2 class="position">User Experience</h2>
         <div class="links">
           <ul>
             <li>
